--- a/client/src/Components/Layout/index.module.scss
+++ b/client/src/Components/Layout/index.module.scss
@@ -1,3 +1,22 @@
 .root {
-
+  background: lightcyan;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  .sidebar {
+    flex: 0.25;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    height: 100vh;
+    .content {
+      height: 100%;
+    }
+    .controls {
+      height: 100px;
+    }
+  }
 }
