added sidebar button / update configs

--- a/client/src/Components/Sidebar/index.module.scss
+++ b/client/src/Components/Sidebar/index.module.scss
@@ -1,4 +1,10 @@
 .root {
   background: lightsalmon;
   height: 100vh;
+  resize: vertical;
+  padding: 0.5rem;
+  width: 2rem;
+  .sidebarButton {
+    //background: red;
+  }
 }
