add logo and colorize background

--- a/client/src/themes/dark.css
+++ b/client/src/themes/dark.css
@@ -12,6 +12,13 @@
   --color-text-disabled: #71747a;
 
   /*background*/
+  --color-bg-01: #1A084E;
+  --color-bg-02: #3B0E68;
+  --color-logo-01: #1A084E;
+  --color-logo-02: #3B0E68;
+  --color-logo-03: #2f1e5f;
+  --color-logo-04: #67558a;
+
   --color-background-01: #252527;
   --color-background-02: #222328;
   --color-background-03: #2b2e34;
