--- a/client/src/themes/light.css
+++ b/client/src/themes/light.css
@@ -14,6 +14,13 @@
   --color-text-disabled: #bab9b9;
 
   /*background*/
+  --color-bg-01: #7fb674;
+  --color-bg-02: #b6bb5c;
+  --color-logo-01: #168100;
+  --color-logo-02: #b3b164;
+  --color-logo-03: #7fb674;
+  --color-logo-04: #dde371;
+  
   --color-background-01: #dbdfe5;
   --color-background-02: #e3e6ea;
   --color-background-03: #e6e8ee;
