add container background

--- a/client/src/Components/Sidebar/index.module.scss
+++ b/client/src/Components/Sidebar/index.module.scss
@@ -3,7 +3,8 @@
   height: 100vh;
   resize: vertical;
   padding: 0.5rem;
-  width: 2rem;
+  //width: 2rem;
+  width: 20rem;
   .sidebarButton {
     //background: red;
   }
