--- a/client/src/themes/dark.css
+++ b/client/src/themes/dark.css
@@ -19,6 +19,8 @@
   --color-logo-03: #2f1e5f;
   --color-logo-04: #67558a;
 
+  --color-bg-container: #252527a1;
+
   --color-background-01: #252527;
   --color-background-02: #222328;
   --color-background-03: #2b2e34;
