--- a/client/src/themes/light.css
+++ b/client/src/themes/light.css
@@ -20,6 +20,8 @@
   --color-logo-02: #b3b164;
   --color-logo-03: #7fb674;
   --color-logo-04: #dde371;
+
+  --color-bg-container: #dbdfe5a1;
   
   --color-background-01: #dbdfe5;
   --color-background-02: #e3e6ea;
