--- a/client/src/Components/Layout/index.module.scss
+++ b/client/src/Components/Layout/index.module.scss
@@ -1,9 +1,10 @@
 .root {
-  //background: lightcyan;
+  position: relative;
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: row;
+  z-index: 5;
   .sidebar {
     //flex: 0.25;
   }
