--- a/client/src/global.module.scss
+++ b/client/src/global.module.scss
@@ -1,3 +1,8 @@
 .clickable {
   cursor: pointer;
 }
+
+.container {
+  background-color: var(--color-bg-container);
+  backdrop-filter: blur(5px);
+}
