--- a/client/src/global.module.scss
+++ b/client/src/global.module.scss
@@ -5,4 +5,5 @@
 .container {
   background-color: var(--color-bg-container);
   backdrop-filter: blur(5px);
+  border: 1px solid var(--color-background-04);
 }
