--- a/client/src/Components/Sidebar/index.module.scss
+++ b/client/src/Components/Sidebar/index.module.scss
@@ -2,9 +2,12 @@
   height: 100vh;
   resize: vertical;
   padding: 0.5rem;
-  //width: 2rem;
-  width: 20rem;
+  width: 2rem;
+  transition: width 0.3s linear;
   .sidebarButton {
     //background: red;
+  }
+  &.expanded {
+    width: 20rem;
   }
 }
