--- a/client/src/style.css
+++ b/client/src/style.css
@@ -193,3 +193,13 @@ svg {
       box-shadow: 0 0 1.6rem 1.6rem var(--color-logo-01);
   }
 }
+
+@keyframes fadeIn {
+    99% {
+        visibility: hidden;
+    }
+    100% {
+        visibility: visible;
+    }
+}
+
