--- a/client/src/global.module.scss
+++ b/client/src/global.module.scss
@@ -3,7 +3,6 @@
 }
 
 .container {
-  background-color: var(--color-bg-container);
+  background-color: var(--color-layout-alpha-01);
   backdrop-filter: blur(5px);
-  border: 1px solid var(--color-background-04);
 }
