--- a/client/src/components/Sidebar/index.module.scss
+++ b/client/src/components/Sidebar/index.module.scss
@@ -1,25 +1,28 @@
 $expandDelay: 200ms;
+$innerPadding: 0 0.5rem;
 
 .root {
   display: flex;
   flex-direction: column;
   height: 100vh;
   resize: vertical;
-  padding: 0.5rem;
-  width: 2rem;
+  padding: 0.5rem 0;
+  width: 2.5rem;
   transition: width $expandDelay linear;
   border-right: 1px solid var(--color-border);
   .sidebarHeader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 2rem;
     width: 100%;
+    padding: $innerPadding;
   }
   .themeToggler, li > .moduleName {
     visibility: hidden;
     display: none;
   }
   .sidebarButton {
-    //background: red;
   }
   .modulesSection {
     display: flex;
@@ -27,12 +30,16 @@ $expandDelay: 200ms;
     flex: 1;
     padding-top: 0.5rem;
     & > li {
+      padding: $innerPadding;
       height: 2rem;
       display: flex;
       justify-content: flex-start;
       align-items: center;
       gap: 0.5rem;
-
+      cursor: pointer;
+      &:hover, &.active {
+        background-color: var(--color-layout-alpha-03);
+      }
     }
   }
   .settingsButton {
