--- a/client/src/components/Controls/index.module.scss
+++ b/client/src/components/Controls/index.module.scss
@@ -1,2 +1,15 @@
 .root {
+  background-color: var(--color-layout-alpha-high-01);
+  padding: 0.5rem;
+  .controlsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 2rem;
+    & > * {
+      height: 100%;
+      min-width: 2rem;
+      border: 1px solid red;
+    }
+  }
 }
