--- a/client/src/components/Controls/index.module.scss
+++ b/client/src/components/Controls/index.module.scss
@@ -1,6 +1,6 @@
 .root {
   background-color: var(--color-layout-alpha-high-01);
-  padding: 0.5rem;
+  padding: 0 0.5rem 0.5rem;
   .controlsContainer {
     display: flex;
     align-items: center;
@@ -9,7 +9,23 @@
     & > * {
       height: 100%;
       min-width: 2rem;
-      border: 1px solid red;
+      //border: 1px solid red;
+    }
+    & > .playerControls {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.4rem;
+      & > * {
+        cursor: pointer;
+      }
+    }
+  }
+  .progressBar {
+    height: 0.2rem;
+    width: 100%;
+    & > .progress {
+      background: var(--color-layout-01);
     }
   }
 }
