add accent color

--- a/client/src/global.module.scss
+++ b/client/src/global.module.scss
@@ -6,3 +6,7 @@
   background-color: var(--color-layout-alpha-01);
   backdrop-filter: blur(5px);
 }
+
+.accentIcon {
+  fill: var(--color-primary);
+}
