--- a/client/src/themes/Aura/light.css
+++ b/client/src/themes/Aura/light.css
@@ -2,7 +2,7 @@
   /** colors */
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-primary: #1e7bd5;
+  --color-primary: #259b3f;
   --color-primary-active: #206eb3;
   --color-primary-hover: #4384c7;
   --color-background: #cbcfd9;
