--- a/client/src/themes/Aura/light.css
+++ b/client/src/themes/Aura/light.css
@@ -10,7 +10,7 @@
 
   /** text */
   --color-text-primary: #151718;
-  --color-text-secondary: #7a7b88;
+  --color-text-secondary: #9fa0ae;
   --color-text-disabled: #bab9b9;
 
   /*background*/
