--- a/client/src/components/common/Table/index.module.scss
+++ b/client/src/components/common/Table/index.module.scss
@@ -1,10 +1,12 @@
 .root {
   display: grid;
   .header {
-    border: 1px solid gray;
-    border-top: 0;
+    font-size: 0.65rem;
+    color: var(--color-text-secondary)
   }
   & > * {
-    border: 1px solid gray;
+    border-bottom: 1px solid gray;
+    font-size: 0.8rem;
+    padding: 0.5rem;
   }
 }
