--- a/client/src/components/Layout/index.module.scss
+++ b/client/src/components/Layout/index.module.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
     flex: 1;
     height: 100vh;
+    width: 1%;
     .content {
       height: calc(100vh - 3rem);
     }
