--- a/client/src/themes/Aura/light.css
+++ b/client/src/themes/Aura/light.css
@@ -3,10 +3,9 @@
   --color-black: #000000;
   --color-white: #ffffff;
   --color-primary: #259b3f;
-  --color-primary-active: #206eb3;
-  --color-primary-hover: #4384c7;
-  --color-background: #cbcfd9;
-  --color-text: #ffffff;
+  --color-accent: #206eb3;
+  /*--color-primary-active: #206eb3;*/
+  /*--color-primary-hover: #4384c7;*/
 
   /** text */
   --color-text-primary: #151718;
