--- a/client/src/themes/Aura/light.css
+++ b/client/src/themes/Aura/light.css
@@ -2,10 +2,14 @@
   /** colors */
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-primary: #259b3f;
-  --color-accent: #206eb3;
-  /*--color-primary-active: #206eb3;*/
-  /*--color-primary-hover: #4384c7;*/
+  --color-accent: #259b3f;
+  --color-primary: #206eb3;
+  --color-primary-active: #206eb3;
+  --color-primary-hover: #4384c7;
+
+  --color-input: #dadfe6;
+  --color-input-hover: #c1c6cd;
+  /*--color-input-active: #c1c6cd;*/
 
   /** text */
   --color-text-primary: #151718;
