--- a/client/src/components/Controls/index.module.scss
+++ b/client/src/components/Controls/index.module.scss
@@ -21,10 +21,42 @@
     }
   }
   .progressBar {
-    height: 0.2rem;
+    font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     width: 100%;
-    & > .progress {
-      background: var(--color-layout-01);
+    margin-bottom: 0.15rem;
+    & > span {
+      padding-top: 0.2rem;
+    }
+    input[type="range"] {
+      -webkit-appearance: none;
+      appearance: none;
+      background: transparent;
+      cursor: pointer;
+      width: 100%;
+      &:focus {
+        outline: none;
+      }
+      &::-webkit-slider-runnable-track {
+        background-color: var(--color-input);
+        height: 0.3rem;
+      }
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        height: 0.9rem;
+        width: 0.9rem;
+        border-radius: 50%;
+        margin-top: -0.24rem;
+        background-color: var(--color-accent);
+        border: 3px solid var(--color-input);
+      }
+      &:focus::-webkit-slider-thumb {
+        outline: 1px solid var(--color-text-primary);
+        outline-offset: 0.05rem;
+      }
     }
   }
 }
