--- a/client/src/components/Layout/index.module.scss
+++ b/client/src/components/Layout/index.module.scss
@@ -17,8 +17,8 @@
     .content {
       height: calc(100vh - 3rem);
     }
-    .controls {
-      height: 3rem;
-    }
+    //.controls {
+    //  height: 3rem;
+    //}
   }
 }
