some progressbar styles

--- a/client/src/themes/Aura/dark.css
+++ b/client/src/themes/Aura/dark.css
@@ -3,6 +3,7 @@
   --color-black: #000000;
   --color-white: #ffffff;
   --color-accent: #7890db;
+  --color-accent-hover: #a8b9ef;
   --color-primary: #206eb3;
   --color-primary-active: #206eb3;
   --color-primary-hover: #4384c7;
