--- a/client/src/themes/Aura/light.css
+++ b/client/src/themes/Aura/light.css
@@ -3,6 +3,7 @@
   --color-black: #000000;
   --color-white: #ffffff;
   --color-accent: #259b3f;
+  --color-accent-hover: #1f772d;
   --color-primary: #206eb3;
   --color-primary-active: #206eb3;
   --color-primary-hover: #4384c7;
