--- a/client/src/components/Controls/index.module.scss
+++ b/client/src/components/Controls/index.module.scss
@@ -51,10 +51,8 @@
         height: 0.5rem;
         width: 0.5rem;
         border-radius: 50%;
-        //margin-top: -0.24rem;
-        background-color: var(--color-text-primary);
-        //border: 3px solid var(--color-input);
-        box-shadow: -100vmax 0 0 calc(100vmax - 0.25rem) var(--color-accent);
+        background-color: var(--color-accent-hover);
+        box-shadow: -0.07rem 0 .2rem var(--color-input), -100vmax 0 0 calc(100vmax - 0.25rem) var(--color-accent);
       }
       //&:focus::-webkit-slider-thumb {
       //  outline: 1px solid var(--color-text-primary);
