--- a/client/src/components/Controls/index.module.scss
+++ b/client/src/components/Controls/index.module.scss
@@ -31,6 +31,7 @@
       padding-top: 0.2rem;
     }
     input[type="range"] {
+      transition: box-shadow 0.1s ease-in-out;
       -webkit-appearance: none;
       appearance: none;
       background: transparent;
@@ -38,6 +39,9 @@
       width: 100%;
       overflow: hidden;
       border-radius: 1rem;
+      &:hover {
+        box-shadow: -0.2px 0.2px 0.125rem var(--color-text-secondary);
+      }
       &:focus {
         outline: none;
       }
