--- a/client/src/components/common/Table/index.module.scss
+++ b/client/src/components/common/Table/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   overflow-x: auto;
+  user-select: none;
   .tHeaders {
     font-size: 0.8rem;
     color: var(--color-text-secondary);
